--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 HELP.md
 .gradle
 build/
@@ -5,7 +6,6 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 !**/src/main/generated
-*.DS_Store
 
 ### STS ###
 .apt_generated
